# collect-friends-app

./: .env  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  draft_article.md  package-lock.json
.github/: pull_request_template.md
api/: .firebaserc  API_USAGE.md  DEPLOY_GUIDE.md  README.md  firebase.json  firestore.rules
collect-friends-app/: .env.example  .gitignore  app.json  firebase.json  firebaseConfig.js  firebaseConfig.ts  (+3 more)
python/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FastAPI仕様書.md  GCP_DEPLOYMENT.md  Makefile  README.md  additional_information.md  cloudbuild.yaml  deploy-with-env.fish  deploy.sh  doc.md  docker-compose.prod.yml  docker-compose.yml  flowchart-implementation-analysis.md  pyproject.toml  redis.conf  requirements.txt  scheduler-config.yaml  service_url.txt  setup-scheduler.sh  実装手順書.md
python/app/: config.py  main.py  models.py
python/app/api/: __init__.py  health.py  recommendations.py
python/app/api/endpoints/: recommendations.py
python/app/core/: config.py  enums.py  exceptions.py  logging.py  middleware.py
python/app/resources/: major_stations.csv
python/app/schemas/: __init__.py  request.py  response.py
python/app/services/: __init__.py  activity_recommendation_service.py  aggregator.py  cache.py  coordinator.py  firestore_service.py  gemini_research.py  google_places.py  proposal_generation_service.py  restaurant_recommendation_service.py  station_search.py
python/app/utils/: distance.py
python/research/: graph.py  nodes.py  state.py
python/tests/: conftest.py  test_request.json
(+83 files in other folders)
