[tool.poetry]
name = "location-recommendation-api"
version = "2.0.0"
description = "位置情報ベース おすすめアクティビティ推薦API"
authors = ["Development Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
geopy = "^2.4.1"
aiohttp = "^3.9.0"
redis = "^5.0.1"
asyncio = "^3.4.3"
langgraph = "^0.0.32"
langchain-google-genai = "^0.0.8"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.26.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true